[1.2] Gitignore, Manifest Update

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
     "name": "Yaklass_helper",
-    "version": "1.1",
+    "version": "1.2",
     "description": "yaklass helper by a3ldi",
     "icons": {
         "32": "icons/32.png",
@@ -10,7 +10,7 @@
     },
     "applications": {
         "gecko": {
-            "id": "yaklass_helper@aeldi"
+            "id": "yaklass_helper_full@aeldi"
         }
     },
     "permissions": [
