--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "Yaklass_helper",
     "version": "1.2.1",
     "description": "yaklass helper by a3ldi",
@@ -19,7 +19,7 @@
         "unlimitedStorage"
     ],
 
-    "browser_action": {
+    "action": {
         "default_icon": "icons/64.png",
         "default_title": "YaKlass Помощник",
         "default_popup": "index.html"
